# mgpu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
mgpu/: CMakeLists.txt
mgpu/include/mgpu/: mgpu.h
mgpu/src/: interface.cpp  render_device.cpp  render_device.hpp
mgpu/src/backend/: buffer.hpp  color_blend_state.hpp  command_list.cpp  command_list.hpp  device.cpp  device.hpp  input_assembly_state.hpp  instance.hpp  physical_device.hpp  queue.hpp  rasterizer_state.hpp  render_command_encoder.cpp  render_command_encoder.hpp  render_device_backend.hpp  render_device_backend_base.hpp  render_target.hpp  resource_set.hpp  resource_set_layout.hpp  sampler.hpp  surface.hpp  swap_chain.hpp  texture.hpp  texture_view.hpp  vertex_input_state.hpp
mgpu/src/backend/command_list/: command_list.hpp  commands.hpp  render_command_encoder.cpp  render_command_encoder.hpp
mgpu/src/backend/opengl/: buffer.cpp  buffer.hpp  render_device_backend.cpp  render_device_backend.hpp
mgpu/src/backend/pipeline_state/: depth_stencil_state.hpp  rasterizer_state.hpp  shader_module.hpp  shader_program.hpp
mgpu/src/backend/vulkan/: buffer.cpp  buffer.hpp  color_blend_state.cpp  color_blend_state.hpp  command_queue.cpp  command_queue.hpp  conversion.hpp  deleter_queue.cpp  deleter_queue.hpp  depth_stencil_state.cpp  depth_stencil_state.hpp  device.cpp  device.hpp  graphics_pipeline_cache.cpp  graphics_pipeline_cache.hpp  input_assembly_state.cpp  input_assembly_state.hpp  instance.cpp  instance.hpp  physical_device.cpp  physical_device.hpp  queue.cpp  queue.hpp  rasterizer_state.cpp  rasterizer_state.hpp  render_device_backend.cpp  render_device_backend.hpp  render_pass_cache.cpp  render_pass_cache.hpp  render_target.cpp  render_target.hpp  resource_set.cpp  resource_set.hpp  resource_set_layout.cpp  resource_set_layout.hpp  sampler.cpp  sampler.hpp  shader_module.cpp  shader_module.hpp  shader_program.cpp  (+13 more)
mgpu/src/backend/vulkan/lib/: vulkan_instance.cpp  vulkan_instance.hpp  vulkan_physical_device.cpp  vulkan_physical_device.hpp  vulkan_result.hpp
mgpu/src/backend/vulkan/pipeline_state/: color_blend_state.cpp  color_blend_state.hpp  depth_stencil_state.cpp  depth_stencil_state.hpp  input_assembly_state.cpp  input_assembly_state.hpp  rasterizer_state.cpp  rasterizer_state.hpp  shader_module.hpp  shader_program.cpp  shader_program.hpp  vertex_input_state.cpp  vertex_input_state.hpp
mgpu/src/backend/vulkan/platform/: physical_device.hpp  surface.hpp
mgpu/src/backend/vulkan/platform/metal/: physical_device.cpp  surface.mm
mgpu/src/backend/vulkan/platform/wayland_x11/: physical_device.cpp  surface.cpp
mgpu/src/backend/vulkan/platform/win32/: physical_device.cpp  surface.cpp
mgpu/src/backend/vulkan/utility/: vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_fence.cpp  vulkan_fence.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_physical_device.hpp  vulkan_result.hpp
mgpu/src/common/: bump_allocator.hpp  limits.hpp  result.hpp  texture.hpp
mgpu/src/frontend/: buffer.cpp  buffer.hpp  color_blend_state.cpp  command_list.cpp  depth_stencil_state.cpp  destroy.cpp  device.cpp  input_assembly_state.cpp  instance.cpp  physical_device.cpp  queue.cpp  rasterizer_state.cpp  render_command_encoder.cpp  render_device.cpp  render_device.hpp  render_target.cpp  resource_set.cpp  resource_set_layout.cpp  result.cpp  sampler.cpp  shader_module.cpp  shader_program.cpp  surface.cpp  swap_chain.cpp  texture.cpp  texture_view.cpp  validation.hpp  vertex_input_state.cpp
mgpu/src/frontend/validation/: buffer.hpp  render_target.hpp  sampler.hpp  shader_program.hpp  texture.hpp  texture_view.hpp
test/: CMakeLists.txt
test/00-hello-world/: CMakeLists.txt
test/00-hello-world/src/: main.cpp
test/00-hello-world/src/shader/: triangle.frag.glsl  triangle.frag.h  triangle.vert.glsl
test/01-hello-triangle/: CMakeLists.txt
test/01-hello-triangle/src/: main.cpp
test/01-hello-triangle/src/shader/: triangle.vert.h
test/02-hello-cube/: CMakeLists.txt
test/02-hello-cube/src/: application.cpp  application.hpp  tmp_cocoa.mm
test/02-hello-cube/src/shader/: cube.frag.glsl  cube.frag.h  cube.vert.glsl  cube.vert.h
test/03-textured-cube/: CMakeLists.txt
test/03-textured-cube/src/: application.cpp  application.hpp  main.cpp
test/03-textured-cube/src/shader/: build.sh  cube.frag.glsl  cube.frag.h  cube.vert.glsl  cube.vert.h
test/playground/: CMakeLists.txt
test/playground/src/: main.cpp
test/playground/src/shader/: triangle.vert.glsl
